# spiceai

./: .gitignore  .prettierrc  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile-cuda  Dockerfile-cuda-release  Dockerfile-release  Dockerfile.local  Makefile  README.md  SECURITY.md  acknowledgements.md  clippy.toml  deny.toml  go.mod  go.sum  rust-toolchain.toml  spicepod.yml  version.txt
crates/agent-orchestrator/: Cargo.toml
crates/agent-orchestrator/src/: agentic_logical_planner.rs  error.rs  lib.rs  logical_plan.rs  pipeline.rs  progress.rs  score.rs
crates/agent-orchestrator/src/logical/: mod.rs  openai_response_format.yaml  plan.rs  planner.rs
crates/agent-orchestrator/src/physical/: agentic_retry.rs  executor.rs  executor_response_format.yaml  mod.rs  plan.rs  planner.rs  (+4 more)
crates/aws-sdk-credential-bridge/: Cargo.toml
crates/aws-sdk-credential-bridge/src/: credential_provider.rs  lib.rs  object_store_builder.rs
crates/aws-sdk-credential-bridge/tests/: credential_provider.rs
crates/cache/: Cargo.toml
crates/cache/benches/: README.md  SUMMARY.md  cache_throughput.rs  hash_algorithms.rs
crates/cache/src/: backend.rs  encoding.rs  key.rs  lib.rs  lru_cache.rs  metrics.rs  simple_cache.rs  utils.rs
crates/cayenne/: Cargo.toml  README.md
crates/cayenne/benches/: deletion_strategies.rs  metastore_operations.rs
crates/cayenne/src/: catalog.rs  cayenne_catalog.rs  deletion.rs  lib.rs  metadata.rs  metastore.rs  optimizer_rules.rs  provider.rs
crates/cayenne/tests/: acid_compliance_test.rs  catalog_concurrency_test.rs  deletion_strategy_detection_test.rs  deletion_strategy_test.rs  deletion_test.rs  deletion_vector_bug_test.rs  deletion_vector_integration_test.rs  file_based_retention_delete_test.rs  int64_pk_deletion_test.rs  integration_test.rs  keybased_deletion_test.rs  max_column_count_test.rs  multi_partition_test.rs  mutation_roundtrip_test.rs  on_conflict_edge_cases_test.rs  on_conflict_test.rs  overwrite_test.rs  partition_chunking_test.rs  partition_pruning_test.rs  position_based_deletion_test.rs  protected_snapshot_projection_test.rs  read_time_filtering_test.rs  retention_test.rs  scalar_function_pushdown_test.rs  shared_metastore_concurrency_test.rs  upsert_with_pending_deletions_test.rs
crates/chunking/: Cargo.toml
crates/chunking/benches/: chunking.rs
crates/chunking/src/: lib.rs
crates/data_components/: Cargo.toml
crates/data_components/benches/: arrow_write.rs  object_filter.rs
crates/data_components/src/: arrow.rs  cdc.rs  clickhouse.rs  databricks_delta.rs  databricks_spark.rs  debezium_kafka.rs  delete.rs  delta_lake.rs  duckdb.rs  flight.rs  flightsql.rs  git.rs  github.rs  index_maintenance.rs  kafka.rs  key_filter.rs  lib.rs  mongodb.rs  mysql.rs  odbc.rs  poly.rs  postgres.rs  refresh_skip.rs  s3_single_file_cached.rs  snowflake.rs  spark_connect.rs  sqlite.rs  token_provider.rs  turso.rs  unity_catalog.rs
crates/data_components/tests/: hadoop_catalog_test.rs  http_provider_test.rs
crates/dataformat-json/: Cargo.toml
crates/dataformat-json/src/: file_format.rs  lib.rs  source.rs  stream.rs  unnest.rs
crates/datafusion-optimizer-rules/: Cargo.toml
crates/datafusion-optimizer-rules/src/: lib.rs  pass_thru.rs
crates/db_connection_pool/: Cargo.toml
crates/db_connection_pool/src/: clickhousepool.rs  dbconnection.rs  lib.rs  odbcpool.rs  scylladbpool.rs  snowflakepool.rs
crates/document_parse/: Cargo.toml
crates/document_parse/src/: docx.rs  lib.rs  pdf.rs
crates/dynamodb-streams/: Cargo.toml
crates/dynamodb-streams/src/: checkpoint.rs  client.rs  client_sdk.rs  lib.rs  metrics.rs  stream.rs  stream_state.rs
crates/event_stream/: Cargo.toml
crates/event_stream/src/: lib.rs
crates/flight_client/: Cargo.toml
crates/flight_client/src/: arrow_flight_factory.rs  cookie.rs  lib.rs  tls.rs
crates/flight_client/tests/: cookie_middleware.rs
crates/flightrepl/: Cargo.toml
crates/flightrepl/src/: completer.rs  config.rs  lib.rs
crates/google-genai/: Cargo.toml  README.md
crates/google-genai/examples/: cached_content.rs  embeddings.rs  function_calling.rs  simple_chat.rs  streaming.rs  thinking.rs  tool_config_modes.rs
crates/google-genai/src/: client.rs  embeddings.rs  error.rs  generate.rs  lib.rs  types.rs
crates/hash-index/: Cargo.toml
crates/hash-index/benches/: lookup.rs
crates/hash-index/src/: bloom.rs  extract.rs  index.rs  lib.rs  tests.rs
crates/heaptrack_alloc/: Cargo.toml  build.rs
crates/heaptrack_alloc/include/: heaptrack_api.h
crates/heaptrack_alloc/src/: heaptrack_shim.c  lib.rs
crates/iceberg-aws-sdk/: Cargo.toml
crates/iceberg-aws-sdk/src/: credential_provider.rs  lib.rs
crates/libnfs/: Cargo.toml  build.rs  wrapper.h
crates/libnfs/src/: lib.rs
crates/llms/: Cargo.toml  build.rs
crates/llms/src/: accumulate.rs  config.rs  databricks.rs  lib.rs  model2vec.rs  progress.rs  provider.rs  responses.rs  streaming_utils.rs  xai.rs
crates/model_components/: Cargo.toml
crates/model_components/src/: model.rs
crates/ns_lookup/: Cargo.toml
crates/ns_lookup/src/: lib.rs
crates/object-store-aws-sdk/: Cargo.toml
crates/object-store-aws-sdk/src/: credential_provider.rs  lib.rs
crates/object_store_occ/: Cargo.toml  README.md
crates/object_store_occ/src/: lib.rs  state.rs
crates/object_store_occ/tests/: s3_integration.rs
crates/package/: Cargo.toml
crates/package/src/: lib.rs
crates/pepper/: Cargo.toml  README.md
crates/pepper/benches/: metastore_operations.rs
crates/pepper/src/: catalog.rs  deletion.rs  lib.rs  metadata.rs  metastore.rs  pepper_catalog.rs  provider.rs  snapshot.rs
crates/pepper/tests/: deletion_test.rs  integration_test.rs  overwrite_test.rs  read_time_filtering_test.rs  retention_test.rs
crates/runtime-acceleration/: Cargo.toml
crates/runtime-acceleration/benches/: snapshot_operations.rs
crates/runtime-acceleration/src/: dataset_checkpoint.rs  engine.rs  layout.rs  lib.rs
crates/runtime-api-types/: Cargo.toml
crates/runtime-api-types/src/: lib.rs
crates/runtime-async/: Cargo.toml
crates/runtime-async/src/: lib.rs
(+11648 files in other folders)
