[workspace]
default-members = ["bin/spiced"]
members = [
    "bin/spiced/",
    "crates/app",
    "crates/arrow_sql_gen",
    "crates/arrow_tools",
    "crates/aws-sdk-credential-bridge",
    "crates/chunking",
    "crates/datafusion-optimizer-rules",
    "crates/data_components",
    "crates/dataformat-json",
    "crates/document_parse",
    "crates/dynamodb-streams",
    "crates/event_stream",
    "crates/flight_client",
    "crates/flightrepl",
    "crates/google-genai",
    "crates/llms",
    "crates/model_components",
    "crates/ns_lookup",
    "crates/otel-arrow",
    "crates/cayenne",
    "crates/runtime-object-store",
    "crates/package",
    "crates/runtime",
    "crates/runtime-auth",
    "crates/runtime-async",
    "crates/runtime-datafusion",
    "crates/runtime-datafusion-index",
    "crates/runtime-datafusion-udfs",
    "crates/runtime-proto",
    "crates/runtime-parameters",
    "crates/runtime-secrets",
    "crates/runtime-table-partition",
    "crates/runtime-rate-control",
    "crates/runtime-request-context",
    "crates/s3_vectors",
    "crates/s3_vectors_metadata_filter",
    "crates/search",
    "crates/spice_cloud",
    "crates/spicepod",
    "crates/telemetry",
    "crates/test-framework",
    "crates/token_provider",
    "crates/tools",
    "crates/util",
    "crates/workers",
    "crates/scheduler",
    "tools/evalconverter",
    "tools/flightpublisher/",
    "tools/flightsubscriber/",
    "tools/otelpublisher/",
    "tools/spicepodschema/",
    "tools/spiceschema",
    "tools/spicepod-validator",
    "tools/testoperator",
    "tools/parsley",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
edition = "2024"
exclude = [".github/"]
homepage = "https://spice.ai"
license = "Apache-2.0"
repository = "https://github.com/spiceai/spiceai"
rust-version = "1.91"
version = "1.11.0-unstable"

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0.99"
arrow = { version = "56.0.0", features = ["prettyprint"] }
arrow-array = "56.0.0"
arrow-buffer = "56.0.0"
arrow-cast = "56.0.0"
arrow-csv = "56.0.0"
arrow-flight = "56.0.0"
arrow-ipc = "56.0.0"
arrow-json = "56.0.0"
arrow-odbc = { git = "https://github.com/pacman82/arrow-odbc", rev = "7316b13ac969eea8bef7b496a2ba334ebd4e6e06" }
arrow-row = "56.0.0"
arrow-schema = "56.0.0"
async-openai = { git = "https://github.com/spiceai/async-openai", rev = "87c2a2e9078b2dfced81d2c954dd2acafb90d70f", features = [
    "byot",
    "embedding",
    "chat-completion",
    "responses",
    "model",
] }
async-stream = "0.3.5"
async-trait = "0.1.89"
aws-config = "1.8.12"
aws-credential-types = "1.2.10"
aws-runtime = "1.5.16"
aws-sdk-bedrockruntime = "1.120.0"
aws-sdk-cognitoidentity = "1.91.0"
aws-sdk-cognitoidentityprovider = "1.105.0"
aws-sdk-dynamodb = "1.100.0"
aws-sdk-dynamodbstreams = "1.87.0"
aws-sdk-glue = "1.132.0"
aws-sdk-s3 = "1.115.0"
aws-sdk-s3vectors = "1.17.0"
aws-sdk-secretsmanager = "1.95.0"
aws-sdk-sts = "1.94.0"
aws-smithy-async = "1.2.6"
aws-smithy-runtime = "1.9.4"
aws-smithy-runtime-api = "1.9.2"
aws-smithy-types = "1.3.4"
axum = { version = "0.8", features = ["macros"] }
ballista-core = "50.0.0"
ballista-executor = "50.0.0"
ballista-scheduler = { version = "50.0.0" }
base64 = "0.22.1"
bb8 = "0.9"
bb8-postgres = "0.9"
bigdecimal = "0.4.7"
byte-unit = "5.1.4"
bytes = "1.10.0"
candle = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0", package = "candle-core" }
candle-core = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0" }
candle-kernels = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0", package = "candle-kernels" }
candle-metal-kernels = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0", package = "candle-metal-kernels" }
candle-nn = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0", package = "candle-nn" }
candle-transformers = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0", package = "candle-transformers" }
charset = "0.1.5"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive", "env"] }
clickhouse-rs = { git = "https://github.com/spiceai/clickhouse-rs.git", tag = "0.2.1", features = [
    "tokio_io",
    "tls",
] }
datafusion = "50.3.0"
datafusion-catalog = "50.3.0"
datafusion-common = "50.3.0"
datafusion-common-runtime = "50.3.0"
datafusion-datasource = "50.3.0"
datafusion-execution = "50.3.0"
datafusion-expr = "50.3.0"
datafusion-federation = { version = "0.4.2", features = ["sql"] }
datafusion-functions = "50.3.0"
datafusion-functions-json = "0.50"
datafusion-physical-expr = "50.3.0"
datafusion-physical-expr-common = "50.3.0"
datafusion-physical-plan = "50.3.0"
datafusion-proto = { version = "50.3.0", features = ["json"] }
datafusion-pruning = "50.3.0"
datafusion-spark = "50.3.0"
datafusion-table-providers = "0.1"
delta_kernel = { version = "0.16.0", features = [
    "default-engine-rustls",
    "arrow-56",
    "internal-api",
] }
derive_builder = "0.20.2"
dotenvy = "0.15"
duckdb = "1.4.1"
dyn-hash = "1.0.0"
fundu = "2.0.1"
futures = "0.3.30"
gethostname = "1.1.0"
git2 = { version = "0.20", default-features = false, features = [
    "https",
    "ssh",
] }
globset = "0.4.16"
governor = "0.10.2"
graph-rs-sdk = { git = "https://github.com/spiceai/graph-rs-sdk", rev = "f8703df260146b313461029d41c4a021306832b8" }
graphql-parser = "0.4.0"
hf-hub = { version = "0.4", features = ["tokio"] }
http = "1.3.1"
httpdate = "1.0"
humantime = "2.1.0"
iceberg = "0.7.0"
iceberg-catalog-glue = "0.7.0"
iceberg-catalog-rest = "0.7.0"
iceberg-datafusion = "0.7.0"
imap = { git = "https://github.com/jonhoo/rust-imap", rev = "6fe22ed11a1ccffe1799a73f48e589366d8d100f" }
indexmap = "2"
insta = { version = "1.46.0", features = ["filters"] }
itertools = "0.14"
linkme = "0.3.35"
logos = "0.16.0"
mailparse = "0.16.1"
moka = { version = "0.12", features = ["future"] }
mongodb = { version = "3.3.0", features = ["openssl-tls"] }
mysql_async = { version = "0.36.1", features = ["native-tls-tls", "chrono"] }
num_cpus = "1.16"
object_store = { version = "0.12.4", features = [
    "aws",
    "gcp",
    "azure",
    "http",
] }
odbc-api = { version = "20" }
opentelemetry = { version = "0.29", default-features = false, features = [
    "metrics",
    "trace",
] }
opentelemetry-http = { version = "0.29", features = ["reqwest-rustls"] }
opentelemetry-otlp = { version = "0.29", default-features = false, features = [
    "metrics",
    "grpc-tonic",
    "http-proto",
    "reqwest-rustls",
] }
opentelemetry-prometheus = "0.29"
opentelemetry-zipkin = { version = "0.29", default-features = false, features = [
    "reqwest",
    "reqwest-rustls",
] }
opentelemetry_sdk = { version = "0.29", default-features = false, features = [
    "metrics",
    "rt-tokio",
    "trace",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_metrics_periodicreader_with_async_runtime",
] }
parking_lot = "0.12"
parquet = "56.0.0"
paste = "1.0.15"
pem = "3.0.4"
percent-encoding = "2.3.1"
pin-project = "1.1"
postcard = { version = "1.1.3", features = ["use-std"] }
prometheus = "0.14"
prost = { version = "0.13.1", default-features = false, features = [
    "prost-derive",
] }
r2d2 = "0.8.10"
rand = "0.9.2"
rdkafka = { version = "0.38.0" }
regex = "1.12.2"
# Pinned to 0.12.24 due to hf-hub content-range header issue with 0.12.25+ (tower-http decompression change)
# See: https://github.com/seanmonstar/reqwest/pull/2840
reqwest = { version = "=0.12.24", features = ["json", "rustls-tls"] }
rmcp = { git = "https://github.com/spiceai/modelcontextprotocol-rust-sdk.git", rev = "a66f66ae345a0fafde1e2ee496ec137d77aef82a" }
roaring = "0.11"
rusqlite = { version = "0.37.0", features = ["bundled-decimal", "chrono"] }
rustls = "0.23"
rustls-pemfile = "2.1.3"
schemars = "1.1.0"
scylla = "1.4.1"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.30"
sha2 = "0.10.8"
snafu = "0.8.6"
snowflake-api = { git = "https://github.com/spiceai/snowflake-rs.git", rev = "85f6ceb72f13ea7701fd9a0ee03afe7f03cd6a97" } # spiceai
sqlparser = "0.58.0"
ssh2 = { version = "0.9.5" }
suppaftp = { version = "6.3.0", features = ["async"] }
sysinfo = "0.37.2"
tantivy = "0.25.0"
tempfile = "3"
tiberius = { version = "0.12.3", default-features = false, features = [
    "tds73",
    "rustls",
    "chrono",
] }
tokenizers = "0.21.2"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "signal",
    "macros",
    "test-util",
    "time",
] }
tokio-postgres = { version = "0.7.15", features = [
    "with-chrono-0_4",
    "with-uuid-1",
] }
tokio-rusqlite = "0.7"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
tonic = { version = "0.13", features = [
    "gzip",
    "tls-ring",
    "tls-native-roots",
] }
tonic-health = { version = "0.13" }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "limit"] }
tracing = "0.1.43"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
turso = { version = "0.3.2", default-features = false, features = ["experimental_indexes"] }
twox-hash = "2.1.2"
url = "2.5"
util = { path = "crates/util" }
uuid = "1"
# We can't use patches for vortex, because their tagged release version .tomls have a version of 0.1.0 not the actual release version
vortex = { git = "https://github.com/spiceai/vortex", rev = "96950b8c250e7409bca5cd7cb723e10d9db37785" }
vortex-array = { git = "https://github.com/spiceai/vortex", rev = "96950b8c250e7409bca5cd7cb723e10d9db37785" }
vortex-datafusion = { git = "https://github.com/spiceai/vortex", rev = "96950b8c250e7409bca5cd7cb723e10d9db37785" }
vortex-session = { git = "https://github.com/spiceai/vortex", rev = "96950b8c250e7409bca5cd7cb723e10d9db37785" }
vortex-utils = { git = "https://github.com/spiceai/vortex", rev = "96950b8c250e7409bca5cd7cb723e10d9db37785" }
x509-certificate = "0.25.0"
# TODO: Switch to official crate once spice-rs is released
spiceai = { git = "https://github.com/spiceai/spice-rs.git", rev = "0ca5a48dae189bc4297350cba7265e9c6036188b" }

[profile.release-lto]
inherits = "release"
lto = true

# Production-like profile with debug symbols for crash investigation
[profile.release-debug]
inherits = "release"
panic = "abort"           # Abort on panic (cleaner crash, prevents undefined behavior from double-panic)
debug = 1                 # DWARF symbols for readable stack traces
strip = "none"            # Ensure symbols not stripped
incremental = false       # Deterministic builds
lto = "thin"              # Keep prod-like LTO (thin is fast + optimized)

[profile.lint]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"

[patch.crates-io]
datafusion = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }                       # spiceai/spiceai-50
datafusion-catalog = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }               # spiceai/spiceai-50
datafusion-common = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }                # spiceai/spiceai-50
datafusion-common-runtime = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }        # spiceai/spiceai-50
datafusion-datasource = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }            # spiceai/spiceai-50
datafusion-datasource-parquet = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }    # spiceai/spiceai-50
datafusion-execution = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }             # spiceai/spiceai-50
datafusion-expr = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }                  # spiceai/spiceai-50
datafusion-expr-common = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }           # spiceai/spiceai-50
datafusion-functions = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }             # spiceai/spiceai-50
datafusion-physical-expr = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }         # spiceai/spiceai-50
datafusion-physical-expr-adapter = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" } # spiceai/spiceai-50
datafusion-physical-expr-common = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }  # spiceai/spiceai-50
datafusion-physical-plan = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }         # spiceai/spiceai-50
datafusion-proto = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }                 # spiceai/spiceai-50
datafusion-proto-common = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }          # spiceai/spiceai-50
datafusion-pruning = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }               # spiceai/spiceai-50
datafusion-session = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }               # spiceai/spiceai-50
datafusion-sql = { git = "https://github.com/spiceai/datafusion.git", rev = "9187e82b16e6187626904fc17d5d3aaa0a7a2754" }                   # spiceai/spiceai-50

datafusion-table-providers = { git = "https://github.com/datafusion-contrib/datafusion-table-providers.git", rev = "c9363befa430a53c471fc18a811ea0769e631114" } # spiceai

datafusion-federation = { git = "https://github.com/spiceai/datafusion-federation.git", rev = "afcbd1ce99703f1322d176fc1b99745f647234d0" } # spiceai:spiceai-50

ballista-core = { git = "https://github.com/spiceai/datafusion-ballista", rev = "9c17685db62a1511ecf2e90aa72b19feabdea1cb" }           # spiceai:spiceai-50
ballista-executor = { git = "https://github.com/spiceai/datafusion-ballista", rev = "9c17685db62a1511ecf2e90aa72b19feabdea1cb" }   # spiceai:spiceai-50
ballista-scheduler = { git = "https://github.com/spiceai/datafusion-ballista", rev = "9c17685db62a1511ecf2e90aa72b19feabdea1cb" } # spiceai:spiceai-50

delta_kernel = { git = "https://github.com/spiceai/delta-kernel-rs.git", rev = "8477c0ba72bc14e31bf829e0ea9b7b217b6e3e5d" } # spiceai-0.16.0

duckdb = { git = "https://github.com/spiceai/duckdb-rs.git", rev = "bcc1d9b77ac04709205e8e79b7ca3dec3d34ec48" } # spiceai-1.4.2

rusqlite = { git = "https://github.com/spiceai/rusqlite.git", rev = "3d1f5f6f6d6d062676210d095df45eafa6e19fd8" }

# Tracking Issue: https://github.com/allan2/dotenvy/issues/113
dotenvy = { git = "https://github.com/spiceai/dotenvy.git", rev = "e5cef1871b08003198949dfe2da988633eaad78f" }

iceberg = { git = "https://github.com/spiceai/iceberg-rust.git", rev = "5ab32ec98ad7d62afb116c69addff49e4b1a7dd9" }              # spiceai-0.7.0
iceberg-catalog-glue = { git = "https://github.com/spiceai/iceberg-rust.git", rev = "5ab32ec98ad7d62afb116c69addff49e4b1a7dd9" } # spiceai-0.7.0
iceberg-catalog-rest = { git = "https://github.com/spiceai/iceberg-rust.git", rev = "5ab32ec98ad7d62afb116c69addff49e4b1a7dd9" } # spiceai-0.7.0
iceberg-datafusion = { git = "https://github.com/spiceai/iceberg-rust.git", rev = "5ab32ec98ad7d62afb116c69addff49e4b1a7dd9" }   # spiceai-0.7.0
iceberg_test_utils = { git = "https://github.com/spiceai/iceberg-rust.git", rev = "5ab32ec98ad7d62afb116c69addff49e4b1a7dd9" }   # spiceai-0.7.0

cudarc = { git = "https://github.com/EricLBuehler/cudarc", rev = "f6e5bf51153d40e34eb1262b98895ac1235b6422" }

# Override candle-core v0.8.x to use matching cudarc version 0.12.2 to satisfy candle-cublaslt requirement
candle-core = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0" }                                          # spiceai-0.8.4-cudarc-0.12
candle-kernels = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0", package = "candle-kernels" }           # spiceai-0.8.4-cudarc-0.12
candle-metal-kernels = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0" }                                 # spiceai-0.8.4-cudarc-0.12
candle-nn = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0", package = "candle-nn" }                     # spiceai-0.8.4-cudarc-0.12
candle-transformers = { git = "https://github.com/spiceai/candle.git", rev = "afd4f323122d63f86cf819ad3dffe0fa796155a0", package = "candle-transformers" } # spiceai-0.8.4-cudarc-0.12

# Use patched arrow-rs 55.2 until next release
arrow = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }        # spiceai-56
arrow-arith = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }  # spiceai-56
arrow-array = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }  # spiceai-56
arrow-buffer = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" } # spiceai-56
arrow-cast = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }   # spiceai-56
arrow-csv = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }    # spiceai-56
arrow-data = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }   # spiceai-56
arrow-flight = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" } # spiceai-56
arrow-ipc = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }    # spiceai-56
arrow-json = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }   # spiceai-56
arrow-ord = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }    # spiceai-56
arrow-row = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }    # spiceai-56
arrow-schema = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" } # spiceai-56
arrow-select = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" } # spiceai-56
arrow-string = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" } # spiceai-56
parquet = { git = "https://github.com/spiceai/arrow-rs.git", rev = "37d844b382204821a5a5e082e1248edb7d35bdf0" }      # spiceai-56

object_store = { git = "https://github.com/apache/arrow-rs-object-store", rev = "f0a772cd49d2ebb1f19f487ccd93d705f48dc891" }
